flowc/tests/fixtures/resolve_e125_variant_tool.flow
tool Plan(x: int) -> int
  effect deterministic

type Outcome =
  | Plan { id: int }

flow decide(string) -> Outcome {
  Plan { id: 1 }
}
